# send-script

./: .gitignore  Cargo.toml  README.md
src/: joker.txt  main.rs
